Prevent horrible overflowing on flexLayout paragraphs.

--- a/client/styles/layouts/_flexLayout.scss
+++ b/client/styles/layouts/_flexLayout.scss
@@ -39,6 +39,8 @@
       p {
         margin-bottom: 0;
 
+        word-break: break-word;
+
         &:first-child {
           margin-top: 0;
         }
